[package]
name = "asset_fetcher"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
crossterm = "0.27.0"
fuzzywuzzy = "0.0.2"
quick-xml = "0.31.0"
quickxml_to_serde = "0.6.0"
ratatui = "0.26.3"
regex = "1.10.4"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tui-textarea = "0.4.0"
